code/tui/snapshots/fullscreen/interaction_flow/approval_submitting.snap
---
source: code/tui/src/app/interaction_flow_tests.rs
expression: "render(&app, 80, 20)"
---
  .                                                                [Dashboard]










┌Approval required─────────────────────────────────────────────────────────────┐
│Run the requested command?                                                    │
│Process spawn  ·  cargo test                                                  │
│> Approve once                                                                │
│  Decline                                                                     │
│Submitting…                                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
  ⏸ Manual
  Waiting for the request result
