code/tui/snapshots/fullscreen/interaction_flow/query_open_narrow.snap
---
source: code/tui/src/app/interaction_flow_tests.rs
expression: "render(&app, 42, 20)"
---
  .                          [Dashboard]







┌Next step  (1/1)────────────────────────┐
│How should the work continue?           │
│> Continue  Use the proposed approach   │
│  Type your own answer  Answer in the in│
│                                        │
└────────────────────────────────────────┘

  ──────────────────────────────────────
  > chat draft stays here
  ───────────────────── Automatic model
  ⏸ Manual
  Enter to answer
