code/tui/snapshots/fullscreen/interaction_flow/recovered_conversation_draft.snap
---
source: code/tui/src/app/interaction_flow_tests.rs
expression: "render(&restored, 80, 20)"
---
  .                                                                [Dashboard]














  ────────────────────────────────────────────────────────────────────────────
  > conversation draft
  ─────────────────────────────────────────────────────────── Automatic model
  ⏸ Manual
  Enter send  ·  shift+tab mode  ·  shift+↓/↑ effort
